--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jari Zwarts <jarizw@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "async": "^1.4.2",
