--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "Jari Zwarts <jarizw@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "async": "^1.4.2",
     "clor": "^1.0.2",
     "coffee-script": "^1.10.0",
+    "commander": "^2.8.1",
+    "ffmetadata": "^1.3.0",
     "id3-writer": "^1.2.2",
     "multimeter": "^0.1.1",
     "node-soundcloud": "0.0.3",
