--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "scdl",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "bin": "./cli.js",
   "preferGlobal": true,
   "description": "The intelligent SoundCloud downloader. Downloads any url, tags automatically.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jariz/scdl.git"
   },
   "author": "Jari Zwarts <jarizw@gmail.com>",
   "license": "ISC",
