--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Jari Zwarts <jarizw@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "clor": "^1.0.2",
+    "turbocolor": "^2.3.0",
     "coffee-script": "^1.10.0",
     "commander": "^2.8.1",
     "ffmetadata": "^1.3.0",
